--- a/win/VC90/game.vcproj
+++ b/win/VC90/game.vcproj
@@ -1217,6 +1217,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\game\ReputationMgr.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\ReputationMgr.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\game\SocialMgr.cpp"
 				>
 			</File>
