--- a/src/bindings/ScriptDev2/Makefile.am
+++ b/src/bindings/ScriptDev2/Makefile.am
@@ -165,7 +165,10 @@ scripts/zone/caverns_of_time/dark_portal/boss_temporus.cpp \
 scripts/zone/caverns_of_time/dark_portal/dark_portal.cpp \
 scripts/zone/caverns_of_time/dark_portal/def_dark_portal.h \
 scripts/zone/caverns_of_time/dark_portal/instance_dark_portal.cpp \
+scripts/zone/caverns_of_time/hyjal/boss_anetheron.cpp \
 scripts/zone/caverns_of_time/hyjal/boss_archimonde.cpp \
+scripts/zone/caverns_of_time/hyjal/boss_azgalor.cpp \
+scripts/zone/caverns_of_time/hyjal/boss_kazrogal.cpp \
 scripts/zone/caverns_of_time/hyjal/boss_rage_winterchill.cpp \
 scripts/zone/caverns_of_time/hyjal/def_hyjal.h \
 scripts/zone/caverns_of_time/hyjal/hyjal.cpp \
