--- a/src/bindings/ScriptDev2/sql/Updates/Makefile.am
+++ b/src/bindings/ScriptDev2/sql/Updates/Makefile.am
@@ -79,4 +79,8 @@ pkgdata_DATA = \
 	r941_mangos.sql \
 	r945_mangos.sql \
 	r945_scriptdev2_script_texts.sql \
-	r945_scriptdev2_script_waypoint.sql
+	r945_scriptdev2_script_waypoint.sql \
+	r947_mangos.sql \
+	r949_scriptdev2_script_waypoint.sql \
+	r951_scriptdev2_script_waypoint.sql \
+	r953_scriptdev2_script_waypoint.sql
