--- a/sql/updates/Makefile.am
+++ b/sql/updates/Makefile.am
@@ -208,6 +208,9 @@ pkgdata_DATA = \
 	7546_02_realmd_uptime.sql \
 	7558_01_mangos_mangos_string.sql \
 	7558_02_mangos_command.sql \
+	7560_01_mangos_gameobject_template.sql \
+	7565_01_mangos_mangos_string.sql \
+	7568_01_mangos_spell_proc_event.sql \
 	README
 
 ## Additional files to include when running 'make dist'
@@ -396,4 +399,7 @@ EXTRA_DIST = \
 	7546_02_realmd_uptime.sql \
 	7558_01_mangos_mangos_string.sql \
 	7558_02_mangos_command.sql \
+	7560_01_mangos_gameobject_template.sql \
+	7565_01_mangos_mangos_string.sql \
+	7568_01_mangos_spell_proc_event.sql \
 	README
