--- a/src/mangosd/Makefile.am
+++ b/src/mangosd/Makefile.am
@@ -39,11 +39,11 @@ mangos_worldd_LDFLAGS = -L../../dep/src/sockets -L../../dep/src/zthread -L../../
 ## Additional files to include when running 'make dist'
 #  Include world daemon configuration
 EXTRA_DIST = \
-	mangosd.conf.dist.in
+	mangosd.conf.dist
 
 ## Additional files to install
 sysconf_DATA = \
-	mangosd.conf.dist.in
+	mangosd.conf.dist
 
 install-data-hook:
 	@list='$(sysconf_DATA)'
