--- a/win/VC90/game.vcproj
+++ b/win/VC90/game.vcproj
@@ -917,6 +917,12 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\game\AuctionHouseBot.cpp">
+			</File>
+			<File
+				RelativePath="..\..\src\game\AuctionHouseBot.h">
+			</File>
+			<File
 				RelativePath="..\..\src\game\AuctionHouseMgr.cpp"
 				>
 			</File>
