--- a/sql/updates/Makefile.am
+++ b/sql/updates/Makefile.am
@@ -149,6 +149,9 @@ pkgdata_DATA = \
 	7622_03_mangos_creature_ai_texts.sql \
 	7627_01_mangos_achievement_criteria_data.sql \
 	7633_01_mangos_achievement_criteria_data.sql \
+	7643_01_mangos_db_version.sql \
+	7643_02_mangos_mangos_string.sql \
+	7644_01_characters_character_pet.sql \
 	README
 
 ## Additional files to include when running 'make dist'
@@ -278,4 +281,7 @@ EXTRA_DIST = \
 	7622_03_mangos_creature_ai_texts.sql \
 	7627_01_mangos_achievement_criteria_data.sql \
 	7633_01_mangos_achievement_criteria_data.sql \
+	7643_01_mangos_db_version.sql \
+	7643_02_mangos_mangos_string.sql \
+	7644_01_characters_character_pet.sql \
 	README
